--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@ in the server source files base directory.
  		<input type="text" id="entryData" name="postEntry" placeholder="Entry Value" value="" />
 	</form>
 	<button id="btn1" onclick="sendEntryText('/post')">Send Data</button>
-	<button id="btn2" onclick="getEntryText('/post')">Load Data</button>
+	<button id="btn2" onclick="getEntryText('/get')">Load Data</button>
 </div>
 
 	<p id="entry">---</p>
