--- a/www/subpage/index.html
+++ b/www/subpage/index.html
@@ -7,11 +7,13 @@ in the server source files base directory.
 <head>
 	<link rel="icon" type="image/gif" href="favicon.gif">
 	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
 <div>
-	<p>Test Sub Page</p>
+	<p>
+		<span id="greentext">Test Sub Page</span>
+	</p>
 </div>
 </body>
 </html>
