--- a/www/index.html
+++ b/www/index.html
@@ -5,13 +5,15 @@ in the server source files base directory.
 -->
 <html>
 <head>
-	<link rel="icon" type="image/gif" href="favicon.gif">
 	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <div>
-	<p>Test Html File</p>
+	<p>
+		Test Html File
+		<br><a href="subpage">Load Subpage</a>
+	</p>
 </div>
 
 <div>
