--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@ in the server source files base directory.
 	<p>
 		Test Html File
 		<br><a href="subpage">Load Subpage</a>
+		<br><a href="subpage/subpage2">Load Subpage/Subpage2</a>
 	</p>
 </div>
 
