--- a/www/subpage/subpage2/index.html
+++ b/www/subpage/subpage2/index.html
@@ -3,6 +3,7 @@ This file is subject to the terms and conditions found
 by requesting "/license" or in the file "LICENSE" located 
 in the server source files base directory.
 -->
+ <meta charset="UTF-8"> 
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
